--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8" />
@@ -110,8 +110,10 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
+              <!-- <button class="btn btn-primary btn-outline w-[46%]"></button> -->
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
@@ -134,8 +136,9 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
@@ -158,8 +161,10 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
+              <!-- <button class="btn btn-primary btn-outline w-[46%]"></button> -->
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
@@ -182,8 +187,10 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
+              <!-- <button class="btn btn-primary btn-outline w-[46%]"></button> -->
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
@@ -206,8 +213,10 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
+              <!-- <button class="btn btn-primary btn-outline w-[46%]"></button> -->
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
@@ -230,15 +239,36 @@
             </div>
             <p>If a dog chews shoes whose shoes does he choose?</p>
             <div class="flex justify-between">
-              <button class="btn btn-primary btn-outline w-[46%]"><i class="fa-solid fa-circle-info mr-2"></i>
-                Details</button>
+
+              <label for="my-modal-3" class="btn btn-primary btn-outline w-[46%]"><i
+                  class="fa-solid fa-circle-info mr-2"></i>
+                Details</label>
+              <!-- <button class="btn btn-primary btn-outline w-[46%]"></button> -->
               <button class="btn btn-secondary btn-outline w-[46%]"><i class="fa-solid fa-bag-shopping mr-2"></i>Buy
                 Now</button>
             </div>
           </div>
         </div>
-
-
+        <!-- modal starts here -->
+        <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+        <div class="modal">
+          <div class="modal-box relative">
+            <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+            <div class="py-4 flex flex-col gap-3">
+              <img src="/images/test.jpg" alt="" class="w-full h-[300px] rounded-xl">
+              <h1 class="text-2xl font-bold"><span class="text-violet-600">Product:</span> Prodcut Name</h1>
+              <p class="text-lg text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quis quae
+                atque deserunt
+                amet eius
+                reiciendis ducimus, quisquam eum. Beatae laudantium ipsam perspiciatis debitis inventore excepturi quis
+                voluptate, praesentium omnis.</p>
+              <h1 class="text-2xl font-bold text-violet-600">Features:</h1>
+              <p class="text-gray-700 text-lg">Feature1,Feature2,Feature3,Feature4</p>
+              <h1 class="text-2xl font-bold"><span class="text-violet-600">Price : </span> $2000</h1>
+            </div>
+          </div>
+        </div>
+        <!-- modal ends here  -->
 
 
       </div>
@@ -246,12 +276,47 @@
     <div class="drawer-side">
       <label for="my-drawer-4" class="drawer-overlay"></label>
       <ul class="menu p-4 overflow-y-auto w-80 bg-base-100 text-base-content">
-        <!-- Sidebar content here -->
-        <li><a>Sidebar Item 1</a></li>
-        <li><a>Sidebar Item 2</a></li>
-        <li><a>Sidebar Item 2</a></li>
-        <li><a>Sidebar Item 2</a></li>
-        <li><a>Sidebar Item 2</a></li>
+        <div class="flex flex-col gap-4">
+          <h1 class="text-2xl text-center">Cart Items</h1>
+          <div class="flex flex-col gap-3">
+            <div class="border-[2px] bg-gray-200 border-red-400 rounded-lg px-2 flex justify-between items-center">
+              <img src="/images/test.jpg" alt="" class="w-[15%] rounded-lg py-2">
+              <p>My Product</p>
+              <p class="border-[2px] rounded-lg px-[10px] py-[2px]">1</p>
+              <i class="fa-sharp fa-solid text-red-500 fa-trash text-xl"></i>
+            </div>
+            <div
+              class="border-[2px] bg-gray-200 border-red-400 cursor-pointer rounded-lg px-2 flex justify-between items-center">
+              <img src="/images/test.jpg" alt="" class="w-[15%] rounded-lg py-2">
+              <p>My Product</p>
+              <p class="border-[2px] rounded-lg px-[10px] py-[2px]">1</p>
+              <i class="fa-sharp fa-solid text-red-500 cursor-pointer fa-trash text-xl"></i>
+            </div>
+          </div>
+          <div class="flex justify-center">
+            <button class="bg-red-500 border duration-500 py-2 px-6 rounded-lg hover:bg-white border-red-500">Clear
+              Cart</button>
+          </div>
+          <div class="bg-slate-400 p-3 rounded-lg font-semibold flex flex-col gap-1">
+            <div class="flex justify-between text-lg">
+              <p class="text-yellow-400">Product Count :</p>
+              <p class="text-white">0</p>
+            </div>
+            <div class="flex justify-between text-lg">
+              <p class="text-yellow-400">Price :</p>
+              <p class="text-white">$0</p>
+            </div>
+            <div class="flex justify-between text-lg">
+              <p class="text-yellow-400">Tax :</p>
+              <p class="text-white">$0</p>
+            </div>
+            <hr class="border-[1.5px]">
+            <div class="flex justify-between text-lg">
+              <p class="text-yellow-400">Total Price :</p>
+              <p class="text-white">$0</p>
+            </div>
+          </div>
+        </div>
       </ul>
     </div>
   </div>
